created gitignore file and added buch of empty classes

--- a/bin/assets/thkaguyamodport/lang/en_us.lang
+++ b/bin/assets/thkaguyamodport/lang/en_us.lang
@@ -3,3 +3,4 @@ tile.thkaguyamodport:laser_crafting_table.name=Laser Crafting Table
 tile.thkaguyamodport:divine_spirit.name=Divine Spirit
 
 itemGroup.thkaguyamodport=Itutu No Nandai MOD+
+itemGroup.spellcards=Spell Cards
